# social-experiment-platform

./: .gitignore  README.md  README_cn.md  config.template.yaml  pyproject.toml  requirements.txt  start.py
frontend/: Caddyfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Navbar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: agents.tsx  confirm.tsx  events.tsx  llmconfig.tsx  templates.tsx  welcome.tsx
prompt_builder/backend/: main.py
prompt_builder/backend/utils/: llm_function.py
reverie/backend_server/: comments.txt  institution.py  pyproject.toml  reverie.py  server.py  simplify.py  survey_log.txt  survey_log1.txt
reverie/backend_server/persona/: action.py  persona.py  workflow.py
reverie/backend_server/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
reverie/backend_server/persona/memory_structures/: associative_memory.py  memory_node.py  scratch.py
reverie/backend_server/persona/prompt_template/: defunct_run_gpt_prompt.py  gpt_structure.py  print_prompt.py  run_gpt_prompt.py
reverie/backend_server/prompt_templates/: execute.md  execute_cn.md  generate_survey_content.md  plan.md  plan_cn.md
reverie/backend_server/utils/: config_template.py  llm_function.py
reverie/storage/base_the_ville_isabella_maria_klaus_online/reverie/: meta.json
reverie/storage/base_the_ville_n25_info/reverie/: meta.json
reverie/storage/demo/reverie/: events.json  meta.json
reverie/storage/shbz/: survey1.json  survey2.json
(+651 files in other folders)
