[project]
name = "social-experiment-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "aiohttp>=3.9.5",
    "asgiref>=3.8.1",
    "beautifulsoup4>=4.12.3",
    "channels>=4.2.0",
    "chromadb>=0.6.2",
    "colorlog>=6.9.0",
    "django>=5.1.4",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "numpy>=2.2.1",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "pipreqs>=0.5.0",
    "pydantic>=2.10.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "tabulate>=0.9.0",
    "tenacity>=8.5.0",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["reverie/backend_server"]

[tool.ruff]
line-length = 120
output-format = "concise"
[tool.ruff.format]
line-ending = "auto"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
allow_split_before_dict_value = false
dedent_closing_brackets = true
split_before_first_argument = true
split_all_top_level_comma_separated_values = false
